--- a/windows_collector/frontend/index.html
+++ b/windows_collector/frontend/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Time Series Chart</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <title>Live</title>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
 </head>
 <body>
-  <h2>Time Series Data from Multiple APIs</h2>
-  <canvas id="timeseriesChart" width="800" height="400"></canvas>
+  <h2>Live Data from Sensors</h2>
+  <div id="results">Loading...</div>
+  <!-- <canvas id="timeseriesChart" width="800" height="400"></canvas> -->
 
   <script src="collect.js"></script>
 </body>
