--- a/local website/index.html
+++ b/local website/index.html
@@ -8,20 +8,14 @@
   <script src="https://cdn.plot.ly/plotly-3.0.1.min.js" charset="utf-8"></script>
 </head>
 <body>
-  <h2>Live Data from Sensors</h2>
   <p>
-    <a href="/index.html">Time-Series Sensor Data</a> | <a href="/live.html?data=sensor">Live Sensor Data</a> | <a href="/live.html?data=health">Health Check</a>
+    <a href="/index.html">Time-Series Sensor Data</a> | <a href="/live.html?data=sensor">Live Sensor Data</a> | <a href="/live.html?data=health">Health Check</a> | <a href="/download.html">Download Sensor Data</a>
   </p>
-  <!-- <div id="results">Loading...</div> -->
-  <!-- <canvas id="timeseriesChart" width="800" height="400"></canvas> -->
+  <h2>Temperature Data (Fahrenheit)</h2>
+  <div id="plotT" style="width:100%;height:600px;"></div>
+  <h2>Power Data (Watts)</h2>
+  <div id="plotP" style="width:100%;height:600px;"></div>
 
-  <div id="results">
-    <h2>Temperature Data (Fahrenheit)</h2>
-    <div id="plotT" style="width:100%;height:600px;"></div>
-    <h2>Power Data (Watts)</h2>
-    <div id="plotP" style="width:100%;height:600px;"></div>
-    </div>
-  </div>
 
 
   <script src="/js/plotTempData.js"></script>
