--- a/local website/live.html
+++ b/local website/live.html
@@ -7,13 +7,10 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
 </head>
 <body>
-  <h2>Live Data from Sensors</h2>
   <p>
-    <a href="/index.html">Time-Series Sensor Data</a> | <a href="/live.html?data=sensor">Live Sensor Data</a> | <a href="/live.html?data=health">Health Check</a>
+    <a href="/index.html">Time-Series Sensor Data</a> | <a href="/live.html?data=sensor">Live Sensor Data</a> | <a href="/live.html?data=health">Health Check</a> | <a href="/download.html">Download Sensor Data</a>
   </p>
-  <!-- <div id="results">Loading...</div> -->
-  <!-- <canvas id="timeseriesChart" width="800" height="400"></canvas> -->
-
+  <h2>Live Data from Sensors</h2>
   <div id="results">
     <table id="resultsTable" border="1" cellspacing="0" cellpadding="5">
       <thead>
