--- a/local_website/download.html
+++ b/local_website/download.html
@@ -27,15 +27,15 @@
     </p>
     <h3>Sensor Interfaces</h3>
     <ul>
-      <li><a href='http://pi1.local:5000' target="_blank">Sensor 1</a></li>
-      <li><a href='http://pi2.local:5000' target="_blank">Sensor 2</a></li>
-      <li><a href='http://pi3.local:5000' target="_blank">Sensor 3</a></li>
-      <li><a href='http://pi4.local:5000' target="_blank">Sensor 4</a></li>
-      <li><a href='http://pi5.local:5000' target="_blank">Sensor 5</a></li>
-      <li><a href='http://pi6.local:5000' target="_blank">Sensor 6</a></li>
-      <li><a href='http://pi7.local:5000' target="_blank">Sensor 7</a></li>
-      <li><a href='http://pi8.local:5000' target="_blank">Sensor 8</a></li>
-      <li><a href='http://kasa.local:5000' target="_blank">Smart Plugs</a></li>
+      <li><a href='http://pi1.local:5000/download' target="_blank">Sensor 1</a></li>
+      <li><a href='http://pi2.local:5000/download' target="_blank">Sensor 2</a></li>
+      <li><a href='http://pi3.local:5000/download' target="_blank">Sensor 3</a></li>
+      <li><a href='http://pi4.local:5000/download' target="_blank">Sensor 4</a></li>
+      <li><a href='http://pi5.local:5000/download' target="_blank">Sensor 5</a></li>
+      <li><a href='http://pi6.local:5000/download' target="_blank">Sensor 6</a></li>
+      <li><a href='http://pi7.local:5000/download' target="_blank">Sensor 7</a></li>
+      <li><a href='http://pi8.local:5000/download' target="_blank">Sensor 8</a></li>
+      <li><a href='http://kasa.local:5000/download' target="_blank">Smart Plugs</a></li>
   </div>
 
 
