--- a/local_website/index.html
+++ b/local_website/index.html
@@ -12,7 +12,11 @@
     <a href="/index.html">Time-Series Sensor Data</a> | <a href="/live.html?data=sensor">Live Sensor Data</a> | <a href="/live.html?data=health">Health Check</a> | <a href="/download.html">Download Sensor Data</a>
   </p>
   <h2>Temperature Data (Fahrenheit)</h2>
-  <div id="plotT" style="width:100%;height:600px;"></div>
+  <div id="plotF" style="width:100%;height:600px;"></div>
+  <h2>Temperature Data (Celcius)</h2>
+  <div id="plotC" style="width:100%;height:600px;"></div>
+    <h2>Humidity (%)</h2>
+  <div id="plotH" style="width:100%;height:600px;"></div>
   <h2>Power Data (Watts)</h2>
   <div id="plotP" style="width:100%;height:600px;"></div>
 
