--- a/local_website/index.html
+++ b/local_website/index.html
@@ -13,7 +13,7 @@
   </p>
   <h2>Temperature Data (Fahrenheit)</h2>
   <div id="plotF" style="width:100%;height:600px;"></div>
-  <h2>Temperature Data (Celcius)</h2>
+  <h2>Temperature Data (Celsius)</h2>
   <div id="plotC" style="width:100%;height:600px;"></div>
     <h2>Humidity (%)</h2>
   <div id="plotH" style="width:100%;height:600px;"></div>
