--- a/local_website/index.html
+++ b/local_website/index.html
@@ -15,7 +15,9 @@
   <div id="plotF" style="width:100%;height:600px;"></div>
   <h2>Temperature Data (Celsius)</h2>
   <div id="plotC" style="width:100%;height:600px;"></div>
-    <h2>Humidity (%)</h2>
+  <h2>Temperature Data (Celsius Calibrated)</h2>
+  <div id="plotCCal" style="width:100%;height:600px;"></div>
+  <h2>Humidity (%)</h2>
   <div id="plotH" style="width:100%;height:600px;"></div>
   <h2>Power Data (Watts)</h2>
   <div id="plotP" style="width:100%;height:600px;"></div>
